apply flicker fix for header to see if it works

--- a/assets/css/page.styl
+++ b/assets/css/page.styl
@@ -30,7 +30,12 @@
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
-  overflow hidden   
+  overflow hidden
+
+.header
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;   
 
 .nav-btn
   display block
